syntax = "proto3";
package rpc;

option go_package = "github.com/harness/gitness/gitrpc/rpc";

import "shared.proto";

service PushService {
  rpc PushRemote(PushRemoteRequest) returns (PushRemoteResponse);
}

message PushRemoteRequest {
  ReadRequest base = 1;
  string remote_url = 2;
  int64 timeout = 3;
}


message PushRemoteResponse {
}

